# truyencv

./: .gitignore  Admin-Flows.md  Converter-Flows.md  User-Flows.md  dotnet_20251013_135836.nettrace
.agent/rules/: datn.md
.github/: copilot-instructions.md
.github/workflows/: dotnet.yml
.windsurf/rules/: code.md
BE/: .dockerignore  .gitignore  Dockerfile  EF-Query.md  Program.cs  README.md  TruyenCV.csproj  TruyenCV.sln  another.md  example.appsettings.json
BE/BackgroundServices/: ComicEmbedBackgroundService.cs  Register.cs  TemplateBackgroundService.cs  readme.md
BE/Const/: HistoryStatus.cs  Roles.cs  System.cs  readme.md
BE/Controllers/: AuthController.cs  HomeController.cs  readme.md
BE/DTOs/: ComicSearchResult.cs  readme.md
BE/Exceptions/: UserRequestException.cs
BE/Extensions/: Jwt.cs  Other.cs  readme.md
BE/Helpers/: Bcrypt.cs  JwtHelper.cs  SnowflakeIdGenerator.cs
BE/Middlewares/: AreaMidware.cs  E500Midware.cs  JWTMidware.cs  JwtAfterAuthMidware.cs  JwtBeforeMidware.cs  Register.cs  readme.md
BE/Migrations/: 20251008123559_init.Designer.cs  20251008123559_init.cs  20251011062730_init.Designer.cs  20251011062730_init.cs  20251013051913_init.Designer.cs  20251013051913_init.cs  20251014032502_init.Designer.cs  20251014032502_init.cs  20251014095236_payment.Designer.cs  20251014095236_payment.cs  20251015024717_add_revoke_fields.Designer.cs  20251015024717_add_revoke_fields.cs  20251015075103_AddCategoryTypeToComicCategory.Designer.cs  20251015075103_AddCategoryTypeToComicCategory.cs  20251015101015_AddComicSearchVector.Designer.cs  20251015101015_AddComicSearchVector.cs  20251019072701_change search dimensions.Designer.cs  20251019072701_change search dimensions.cs  20251028020007_firebase-auth.Designer.cs  20251028020007_firebase-auth.cs  20251028022058_user_image.Designer.cs  20251028022058_user_image.cs  20251028045821_user_comic_unlock_history.Designer.cs  20251028045821_user_comic_unlock_history.cs  20251029091125_constrant check.Designer.cs  20251029091125_constrant check.cs  20251106034817_disable auto include.Designer.cs  20251106034817_disable auto include.cs  20251107040758_comic comment.Designer.cs  20251107040758_comic comment.cs  20251109071954_comic_rate_count.Designer.cs  20251109071954_comic_rate_count.cs  20251114064758_converter.Designer.cs  20251114064758_converter.cs  (+6 more)
BE/Models/: Role.cs  (+26 more)
CDN/: crawler.ipynb  crawler.py  metruyencv.biz.cookies.json
CDN/cloudflare/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  schemas.py  worker.py  wrangler.toml
CDN/cloudflare/app/: main.py  r2.py  schemas.py  worker.py
CDN/cloudflare/app/routers/: upload.py
CDN/cloudflare/routers/: upload.py
FE/: .env-example  .eslintrc.json  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  wrangler.jsonc
Microservices/PgVector-Embedding/: .gitignore  app.py  pyproject.toml  req.txt  wrangler.toml
Microservices/PgVector-Embedding/.github/workflows/: ci.yml
Microservices/PgVector-Embedding/src/: worker.py
Service-manager/: .gitignore  README.md  app.py  command-eg.json  requirements.txt  test.py
TTS/: .gitignore  README.md  app.py  live-app.py  pyproject.toml  requirements.txt  run.ps1  run.sh  temp.txt  test.ipynb  test.py  train_xtts.ipynb  tts.ipynb  tts.py  tts_eg.py
TTS/notebooks/: train_viVoice.ipynb  vixtts-ft-code.ipynb
(+498 files in other folders)
