[project]
name = "vixtts-tts"
version = "0.1.0"
description = "Vietnamese XTTS FastAPI Service"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "nvidia-cublas-cu12>=12.4",
    "nvidia-cuda-cupti-cu12>=12.4",
    "nvidia-cuda-nvrtc-cu12>=12.4",
    "nvidia-cuda-runtime-cu12>=12.4",
    "nvidia-cudnn-cu12>=9.0",
    "nvidia-cufft-cu12>=11.2",
    "nvidia-curand-cu12>=10.3",
    "nvidia-cusolver-cu12>=11.6",
    "nvidia-cusparse-cu12>=12.3",
    "nvidia-npp-cu12>=12.2",
    "nvidia-nvjitlink-cu12>=12.4",
    "nvidia-nvtx-cu12>=12.4",
    "underthesea",
    "vinorm",
    "python-multipart",
    "ffmpeg<8",
    "numpy>=1.24.3",
    "cython>=0.29.30",
    "scipy>=1.11.2",
    "torch==2.9.1+cu128",
    "torchaudio==2.9.1+cu128",
    "torchcodec==0.8.1",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "scikit-learn>=1.3.0",
    "numba>=0.57.0",
    "inflect>=5.6.0",
    "tqdm>=4.64.1",
    "anyascii>=0.3.0",
    "pyyaml>=6.0",
    "fsspec>=2023.6.0",
    "aiohttp>=3.8.1",
    "packaging>=23.1",
    "mutagen==1.47.0",
    "flask>=2.0.1",
    "pysbd>=0.3.4",
    "umap-learn>=0.5.1",
    "pandas>=1.4,<2.0",
    "matplotlib>=3.7.0",
    "trainer>=0.0.36",
    "coqpit>=0.0.16",
    "jieba",
    "pypinyin",
    "hangul_romanize",
    "gruut[de,es,fr]==2.2.3",
    "jamo",
    "nltk",
    "g2pkk>=0.1.1",
    "bangla",
    "bnnumerizer",
    "bnunicodenormalizer",
    "einops>=0.6.0",
    "transformers==4.33.0",
    "encodec>=0.1.1",
    "unidecode>=1.3.2",
    "num2words",
    "spacy[ja]>=3",
    "cupy-cuda12x>=13.0.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchcodec = { index = "pytorch" }

[tool.setuptools.packages.find]
where = ["."]
include = ["TTS*"]
exclude = ["models*", "voices*", "outputs*", "test*"]
