[project]
name = "cdn-fastapi-worker"
version = "0.1.0"
description = "Python fastapi CDN worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    "markupsafe",
    "fastapi",
    "dotenv",
    "boto3>=1.40.72",
    "urllib3==1.26.20"
]

[dependency-groups]
dev = [
    "workers-py"
]
