[project]
name = "cdn-fastapi-worker"
version = "0.1.0"
description = "Python fastapi CDN worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    "markupsafe",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "dotenv",
    "boto3>=1.40.72",
]

[dependency-groups]
dev = [
    "workers-py"
]
